objects/IO_Hierarchical__c.object
<CustomObject>
    <fields>
        <fullName>Default_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado</label>
        <referenceTo>Status__c</referenceTo>
        <relationshipLabel>Jerarquías de IOs</relationshipLabel>
        <relationshipName>IO_Hierarchicals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Result_Ok__c</fullName>
        <label>Resultado OK IO Padre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>idIO_child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispositivo IO Hijo</label>
        <referenceTo>IO__c</referenceTo>
        <relationshipLabel>Jerarquías de IOs</relationshipLabel>
        <relationshipName>idIO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idIO_parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispositivo IO Padre</label>
        <referenceTo>IO__c</referenceTo>
        <relationshipLabel>Jerarquías de IOs (Dispositivo IO Padre)</relationshipLabel>
        <relationshipName>Jerarqu_as_de_IOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <label>Jerarquía de IOs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IO Hierarchical Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jerarquías de IOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>